# fastnotes

./: Dockerfile  Makefile  README.md  alpine-base-0.0.16.pkg  alpine-build-0.0.16.pkg  alpine-build-0.0.17.pkg  package-lock.json  pyproject.toml  requirements-base-0.0.16.txt  requirements-base-0.0.17.txt  requirements-base.txt  requirements-deploy-0.0.16.txt  requirements-deploy-0.0.17.txt  requirements-extra-0.0.16.txt  requirements-extra-0.0.17.txt  requirements-extra.txt
