[tool.poetry]
name = "fastnotes"
version = "0.0.15"
description = ""
authors = ["Andreas Trawöger <atrawog@dorgeln.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
numpy = "^1.20.2"
pandas = "^1.2.4"
jupyterlab = "^3.0.14"
altair = "^4.1.0"
altair-saver = "^0.5.0"
nbgitpuller = "^0.9.0"
jupyter-server-proxy = "^3.0.2"
cysgp4 = "^0.3.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
