[tool.poetry]
name = "fastnotes"
version = "0.0.16"
description = ""
authors = ["Andreas Trawöger <atrawog@dorgeln.org>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
Cython = "^0.29.23"
numpy = "^1.20.2"
pandas = "^1.2.4"
jupyterlab = "^3.0.14"
altair = "^4.1.0"
altair-saver = "^0.5.0"
nbgitpuller = "^0.9.0"
jupyter-server-proxy = "^3.0.2"
cysgp4 = "^0.3.3"
Pillow = "^8.2.0"
jupyterlab-spellchecker = "^0.5.2"
PyYAML = "^5.4.1"
toml = "^0.10.2"
matplotlib = "^3.4.1"
sshkernel = "^0.11.0"
jupyterlab-git = "^0.30.0"
asciinema = "^2.0.2"
ttygif = "^1.2.149"
cowsay = "^4.0"
lolcat = "^1.4"
vega-datasets = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
